--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     <title>The Aubrey Music</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Baumans&family=Cormorant+SC:wght@300;400;500;600;700&family=Inter:wght@100&family=Noto+Sans+Symbols:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baumans&family=Cormorant+SC:wght@300;400;500;600;700&family=Inter:wght@100&family=Noto+Sans+Symbols:wght@100..900&display=swap&family=Nunito:ital,wght@0,200;1,200&display=swap" rel="stylesheet">
     
   </head>
   <body>
